[gd_scene load_steps=6 format=3 uid="uid://bixqvhqy4mhvw"]

[ext_resource type="Script" path="res://EnemigoEnvestida.gd" id="1_brii4"]
[ext_resource type="PackedScene" uid="uid://bbmqaxnsny75u" path="res://Componentes/HealthComponent.tscn" id="2_0iu72"]
[ext_resource type="PackedScene" uid="uid://qt7h3io8chkv" path="res://Componentes/hitbox_controler.tscn" id="3_ney5j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wgvvs"]
radius = 21.095

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_inidk"]
length = 99.2

[node name="EnemigoEnvestida" type="CharacterBody2D"]
script = ExtResource("1_brii4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wgvvs")
debug_color = Color(2.40654e-08, 0.650083, 0.113229, 0.42)

[node name="HealthComponent" parent="." instance=ExtResource("2_0iu72")]
scale = Vector2(1.2, 1.2)
max_health = 5

[node name="HitboxControler" parent="." instance=ExtResource("3_ney5j")]
scale = Vector2(0.7, 0.7)
damage = 2

[node name="DeteccionPlayer" type="Area2D" parent="."]

[node name="Arriba" type="Area2D" parent="DeteccionPlayer"]

[node name="ArribaCol" type="CollisionShape2D" parent="DeteccionPlayer/Arriba"]
rotation = -3.14159
scale = Vector2(5, 5)
shape = SubResource("SeparationRayShape2D_inidk")
debug_color = Color(0.27294, 0.50122, 1, 0.42)

[node name="Abajo" type="Area2D" parent="DeteccionPlayer"]
rotation = 1.5708
scale = Vector2(5, 5)

[node name="AbajoCol" type="CollisionShape2D" parent="DeteccionPlayer/Abajo"]
rotation = -1.5708
shape = SubResource("SeparationRayShape2D_inidk")
debug_color = Color(0.27294, 0.50122, 1, 0.42)

[node name="Derecha" type="Area2D" parent="DeteccionPlayer"]
rotation = -1.5708
scale = Vector2(5, 5)

[node name="DerechaCol" type="CollisionShape2D" parent="DeteccionPlayer/Derecha"]
shape = SubResource("SeparationRayShape2D_inidk")
debug_color = Color(0.27294, 0.50122, 1, 0.42)

[node name="Izquierda" type="Area2D" parent="DeteccionPlayer"]
rotation = -1.5708
scale = Vector2(5, 5)

[node name="IzquierdaCol" type="CollisionShape2D" parent="DeteccionPlayer/Izquierda"]
rotation = -3.14159
shape = SubResource("SeparationRayShape2D_inidk")
debug_color = Color(0.27294, 0.50122, 1, 0.42)

[connection signal="onDead" from="HealthComponent" to="." method="_on_health_component_on_dead"]
[connection signal="body_entered" from="DeteccionPlayer/Arriba" to="." method="_on_arriba_body_entered"]
[connection signal="body_entered" from="DeteccionPlayer/Abajo" to="." method="_on_abajo_body_entered"]
[connection signal="body_entered" from="DeteccionPlayer/Derecha" to="." method="_on_derecha_body_entered"]
[connection signal="body_entered" from="DeteccionPlayer/Izquierda" to="." method="_on_izquierda_body_entered"]
